# zrdds-rust

./: .gitignore  CI.md  Cargo.toml  README.md  TESTING.md  basic_usage.exe.ddslog  bindgen_demo.exe.ddslog  build.rs  performance.md  pre-commit.md  setup_precommit.ps1  vercel.json
.github/: release.yml
.github/workflows/: ci.yml  release.yml  test.yml
benches/: performance_benchmarks.rs
csrc/: test.c  test.h
css/: app.css
dioxus_components/: Cargo.toml
dioxus_components/src/: accordion.rs  lib.rs  navbar.rs  portal.rs  slider.rs  toast.rs  toggle_group.rs
examples/: basic_usage-pub.rs  basic_usage-sub.rs  basic_usage.rs  pub.rs  test.rs
include/CInterface/: ChatMessage.c  ChatMessage.h  ChatMessageDataReader.c  ChatMessageDataReader.h  ChatMessageDataWriter.c  ChatMessageDataWriter.h  ChatMessageTypeSupport.c  ChatMessageTypeSupport.h  Condition.h  DataWriter.h  DynamicDataReader.h  DynamicDataWriter.h  Publisher.h  PublisherListener.h  WaitSet.h  ZRBuiltinTypesDataWriter.h  ZRBuiltinTypesTypeSupport.h  ZRDDSCWrapper.h  ZRDDSDataReader.cpp  ZRDDSDataWriter.cpp  ZRDDSDataWriter.h  ZRDDSTypeSupport.cpp
scripts/: build.md  pre-commit.md  run_tests.ps1  run_tests.sh
src/: app.rs  bindings.rs  dds_handlers.rs  dioxus_app.rs  dioxus_main.rs  dioxus_structs.rs  interface_def.rs  interface_impl.rs  lib.rs  main.rs  structs.rs  utils.rs
src/api/: domain_participant.rs  mod.rs  reader.rs  return_code.rs  writer.rs
src/components/: switch.rs
src/core/: bytes_seq.rs  chat_message.rs  mod.rs  qos.rs  return_code.rs  sample_info_seq.rs  tests.rs  topic.rs  type_support.rs
src/core/bytes/: bytes.rs  bytes_seq.rs  instancehandle_t.rs  mod.rs
src/core/domain/: dp_listener.rs  dp_qos.rs  factory.rs  mod.rs  participant.rs  qos.rs
src/core/listen/: listener.rs
src/core/publication/: PublisherListener.rs  mod.rs  publisher.rs  publisher_listener.rs  publisher_qos.rs  writer.rs  writer_listener.rs  writer_qos.rs
src/core/qos/: mod.rs
src/core/sample/: mod.rs  sample_info.rs  sample_info_seq.rs
src/core/subscription/: mod.rs  reader.rs  reader_listener.rs  reader_qos.rs  subscriber.rs  subscriber_listener.rs  subscriber_qos.rs
src/core/topic/: mod.rs  topic.rs  topic_description.rs  topic_listener.rs  topic_qos.rs
src/core/type_support/: mod.rs  type_support.rs
src/css/: switch.css
src/dds_handlers/: tests.rs
src/utils/: tests.rs
src/zrdds/: common.rs  domain_participant.rs  domain_participant_factory.rs  mod.rs
src/zrdds_interface/: dp_domain_participant.rs  dp_factory.rs  mod.rs  publisher.rs  reader.rs  subscriber.rs  topic.rs  writer.rs
tests/: integration_tests.rs
zrdds-cf/: Cargo.toml
zrdds-cf/examples/: test.rs
zrdds-cf/libs/: ZRDDSC_VS2019.lib  ZRDDSCd_VS2019.lib
zrdds-cf/src/: bindings.rs  lib.rs
zrdds-cf/src/zrdds_interface/: dp_domain_participant.rs  dp_factory.rs  mod.rs  publisher.rs  reader.rs  subscriber.rs  topic.rs  writer.rs
zrdds-rust/: Cargo.toml  README.md  build.rs
zrdds-rust/include/CInterface/: BuiltinDataDataReader.h  ContentFilteredTopic.h  DataReader.h  DataReaderListener.h  DataWriterListener.h  DomainParticipant.h  DomainParticipantFactory.h  Entity.h  (+12 more)
zrdds-rust/libs/: ZRDDSCpp_VS2019.lib  ZRDDSCppd_VS2019.lib
zrdds-rust/src/: bindings.rs  lib.rs
(+10 files in other folders)
