[package]
name = "zrdds"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Rust bindings for ZRDDS"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/zrdds"
keywords = ["dds", "real-time", "messaging", "distributed"]
categories = ["network-programming", "api-bindings"]
readme = "README.md"


[lib]
name = "zrdds"
path = "src/lib.rs"

[[bin]]
name = "zrdds-dioxus"
path = "src/dioxus_main.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"
libc = "0.2"
serde_json = "1.0.143"
whoami = "1.3" 
image = "0.24"
base64 = "0.21"
parking_lot = "0.12.1"
thiserror = "2.0"
rfd = "0.15"
chrono = "0.4"
egui-video = "0.9.0"
# Dioxus dependencies for new desktop app
dioxus = { version = "0.6", features = ["desktop"] }
dioxus-desktop = "0.6"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
env_logger = "0.10"
rand = "0.8"

[build-dependencies]
cc = "1.0"
bindgen = "0.72"
glob = "0.3.3"
