[package]
name = "zrdds"
version = "0.1.0"
edition = "2024"
# authors = ["Your Name <your.email@example.com>"]
description = "Rust bindings for ZRDDS"
license = "proprietary"
# repository = "https://github.com/yourusername/zrdds"
# keywords = ["dds", "real-time", "messaging", "distributed"]
# categories = ["network-programming", "api-bindings"]
readme = "README.md"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "build.rs",
    # 如果希望用户能在不配置 ZRDDS 的环境下直接使用则要把 libs 也打包进去
]

[lib]
name = "zrdds"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[dependencies]
paste = "1"

[build-dependencies]
cc = "1.0"
bindgen = "0.72"
glob = "0.3.3"
